--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -29,6 +29,41 @@ body {
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
 /* ------------------------------------------------------------------ */
+.select-css {
+  opacity: 0.7;
+  display: block;
+  font-size: 12px;
+  font-family: sans-serif;
+  font-weight: 700;
+  color: #222;
+  line-height: 1.3;
+  padding: 0.5em 1.2em 0.4em 1.2em;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #0f9095;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #0f9095;
+}
+.select-css::-ms-expand {
+  display: none;
+  border-color: #0f9095;
+}
+.select-css:hover {
+  border-color: #0f9095;
+}
+.select-css:focus {
+  border-color: #0f9095;
+  outline: none;
+}
+.select-css option {
+  font-weight: 700;
+  opacity: 0.7;
+}
 
 header {
   position: relative;
@@ -317,6 +352,13 @@ ul#nav li.current a {
 #resume .date {
   font: 15px/24px "opensans-regular", sans-serif;
   margin-top: 6px;
+}
+
+#resume .logo {
+  width: 30px;
+  margin-right: 8px;
+  position: relative;
+  top: -36px;
 }
 
 /*----------------------------------------------*/
